deploy: 0051b90cb9983410aac08564ccefe81c08dbcb5f

--- a/appendix-06-translation.html
+++ b/appendix-06-translation.html
@@ -167,9 +167,8 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h2><a class="header" href="#appendix-f-translations-of-the-book" id="appendix-f-translations-of-the-book">Appendix F: Translations of the Book</a></h2>
-<p>For resources in languages other than English. Most are still in progress; see
-<a href="https://github.com/rust-lang/book/issues?q=is%3Aopen+is%3Aissue+label%3ATranslations">the Translations label</a> to help or let us know about a new translation!</p>
+                        <h2><a class="header" href="#附錄-f本書的翻譯本" id="附錄-f本書的翻譯本">附錄 F：本書的翻譯本</a></h2>
+<p>對於英文以外的語言資源，大部分都還在翻譯中，請查看 <a href="https://github.com/rust-lang/book/issues?q=is%3Aopen+is%3Aissue+label%3ATranslations">Translations label</a> 來幫助或讓我們知道有哪些新的翻譯！</p>
 <ul>
 <li><a href="https://github.com/rust-br/rust-book-pt-br">Português</a> (BR)</li>
 <li><a href="https://github.com/nunojesus/rust-book-pt-pt">Português</a> (PT)</li>
@@ -192,6 +191,13 @@
 <li><a href="https://github.com/rust-lang-de/rustbook-de">Deutsch</a></li>
 <li><a href="https://github.com/RustDili/dokuman/tree/master/ceviriler">Turkish</a>, <a href="https://rustdili.github.io/">online</a></li>
 </ul>
+<blockquote>
+<ul>
+<li>translators: [Ngô͘ Io̍k-ūi <a href="mailto:wusyong9104@gmail.com">wusyong9104@gmail.com</a>]</li>
+<li>commit: <a href="https://github.com/rust-lang/book/blob/e5ed97128302d5fa45dbac0e64426bc7649a558c/src/appendix-06-translation.md">e5ed971</a></li>
+<li>updated: 2020-09-30</li>
+</ul>
+</blockquote>
 
                     </main>
 
