deploy: 26669b1d5291fcd3325008ca80eec2432c1a109d

--- a/ch20-00-final-project-a-web-server.html
+++ b/ch20-00-final-project-a-web-server.html
@@ -167,34 +167,28 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#final-project-building-a-multithreaded-web-server" id="final-project-building-a-multithreaded-web-server">Final Project: Building a Multithreaded Web Server</a></h1>
-<p>It’s been a long journey, but we’ve reached the end of the book. In this
-chapter, we’ll build one more project together to demonstrate some of the
-concepts we covered in the final chapters, as well as recap some earlier
-lessons.</p>
-<p>For our final project, we’ll make a web server that says “hello” and looks like
-Figure 20-1 in a web browser.</p>
+                        <h1><a class="header" href="#最終專案建立一個多執行緒網路伺服器" id="最終專案建立一個多執行緒網路伺服器">最終專案：建立一個多執行緒網路伺服器</a></h1>
+<p>這真是趟漫長的旅途，但我們已經抵達本書的最終章了。在本章中，我們會在建構另一個專案來解釋最後幾章提到的概念，並複習一些之前更早的章節。</p>
+<p>在我們的最終專案，我們會建立一個會回復「hello」的網路伺服器，如圖示 20-1 的網路瀏覽器所示。</p>
 <p><img src="img/trpl20-01.png" alt="hello from rust" /></p>
-<p><span class="caption">圖示 20-1: Our final shared project</span></p>
-<p>Here is the plan to build the web server:</p>
+<p><span class="caption">圖示 20-1：我們的最終專案</span></p>
+<p>以下是我們建構網路伺服器的計劃：</p>
 <ol>
-<li>Learn a bit about TCP and HTTP.</li>
-<li>Listen for TCP connections on a socket.</li>
-<li>Parse a small number of HTTP requests.</li>
-<li>Create a proper HTTP response.</li>
-<li>Improve the throughput of our server with a thread pool.</li>
+<li>學習一些 TCP 與 HTTP。</li>
+<li>在插座（socket）上接聽 TCP 連線。</li>
+<li>解析一些的 HTTP 請求。</li>
+<li>建立合適的回應。</li>
+<li>透過執行緒池（thread pool）改善伺服器的吞吐量。</li>
 </ol>
-<p>But before we get started, we should mention one detail: the method we’ll use
-won’t be the best way to build a web server with Rust. A number of
-production-ready crates are available on <a href="https://crates.io/">crates.io</a> that
-provide more complete web server and thread pool implementations than we’ll
-build.</p>
-<p>However, our intention in this chapter is to help you learn, not to take the
-easy route. Because Rust is a systems programming language, we can choose the
-level of abstraction we want to work with and can go to a lower level than is
-possible or practical in other languages. We’ll write the basic HTTP server and
-thread pool manually so you can learn the general ideas and techniques behind
-the crates you might use in the future.</p>
+<p>不過在我們開始之前，我們需要提醒一件事，我們使用的方法不會是在 Rust 中建立網路伺服器的最佳方案。<a href="https://crates.io/">crates.io</a> 上有不少已經能用在生產環境的 crate，它們都有提供比我們所建立的還更完善的網路伺服器與執行緒池。</p>
+<p>然而我們在本章節的目的是要幫助你學習，而不是走捷徑。因爲 Rust 是個系統程式設計語言，我們可以選擇我們想運用的抽象層級，而且可以比其他語言更可能且實際地抵達最底層。我們會親自寫出基本的 HTTP 伺服器與執行緒池，來幫助你瞭解往後你可能會用到的 crate 背後的基本概念與技術。</p>
+<blockquote>
+<ul>
+<li>translators: [Ngô͘ Io̍k-ūi <a href="mailto:wusyong9104@gmail.com">wusyong9104@gmail.com</a>]</li>
+<li>commit: <a href="https://github.com/rust-lang/book/blob/e5ed97128302d5fa45dbac0e64426bc7649a558c/src/ch20-00-final-project-a-web-server.md">e5ed971</a></li>
+<li>updated: 2020-10-01</li>
+</ul>
+</blockquote>
 
                     </main>
 
