--- a/ch18-03-pattern-syntax.html
+++ b/ch18-03-pattern-syntax.html
@@ -435,7 +435,7 @@ fn main() {
 <p><span class="caption">範例 18-19：忽略元組中數個位置</span></p>
 <p>此程式碼會印出 <code>Some numbers: 2, 8, 32</code>，然後數值 4 與 16 會被忽略。</p>
 <h4><a class="header" href="#在名稱前加上-_-來忽略未使用的變數" id="在名稱前加上-_-來忽略未使用的變數">在名稱前加上 <code>_</code> 來忽略未使用的變數</a></h4>
-<p>如果你建立了一個變數但沒有在任何地方使用到它，Rust 通常會提出警告，因爲這可能是個錯誤。但有時後先建立個你還沒有使用的變數是很有用的，像是你還在寫原型或是才剛開個專案而已。在這種場合，你可以在尚未使用的變數名稱前加上底線，來告訴 Rust 不用提出警告。在範例 18-20 中，我們建立了兩個未使用的變數，但當我們執行此程式碼時，我們應該會只收到其中一個的警告而已。</p>
+<p>如果你建立了一個變數但沒有在任何地方使用到它，Rust 通常會提出警告，因爲這可能是個錯誤。但有時候先建立個你還沒有使用的變數是很有用的，像是你還在寫原型或是才剛開個專案而已。在這種場合，你可以在尚未使用的變數名稱前加上底線，來告訴 Rust 不用提出警告。在範例 18-20 中，我們建立了兩個未使用的變數，但當我們執行此程式碼時，我們應該會只收到其中一個的警告而已。</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">fn main() {
     let _x = 5;
