--- a/ch20-00-final-project-a-web-server.html
+++ b/ch20-00-final-project-a-web-server.html
@@ -167,20 +167,20 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#最終專案建立一個多執行緒網路伺服器" id="最終專案建立一個多執行緒網路伺服器">最終專案：建立一個多執行緒網路伺服器</a></h1>
+                        <h1><a class="header" href="#最終專案建立一個多執行緒網頁伺服器" id="最終專案建立一個多執行緒網頁伺服器">最終專案：建立一個多執行緒網頁伺服器</a></h1>
 <p>這真是趟漫長的旅途，但我們已經抵達本書的最終章了。在本章中，我們會在建構另一個專案來解釋最後幾章提到的概念，並複習一些之前更早的章節。</p>
-<p>在我們的最終專案，我們會建立一個會回復「hello」的網路伺服器，如圖示 20-1 的網路瀏覽器所示。</p>
+<p>在我們的最終專案，我們會建立一個會回復「hello」的網頁伺服器，如圖示 20-1 的網頁瀏覽器所示。</p>
 <p><img src="img/trpl20-01.png" alt="hello from rust" /></p>
 <p><span class="caption">圖示 20-1：我們的最終專案</span></p>
-<p>以下是我們建構網路伺服器的計劃：</p>
+<p>以下是我們建構網頁伺服器的計劃：</p>
 <ol>
 <li>學習一些 TCP 與 HTTP。</li>
-<li>在插座（socket）上接聽 TCP 連線。</li>
+<li>在插座（socket）上監聽 TCP 連線。</li>
 <li>解析一些的 HTTP 請求。</li>
 <li>建立合適的回應。</li>
 <li>透過執行緒池（thread pool）改善伺服器的吞吐量。</li>
 </ol>
-<p>不過在我們開始之前，我們需要提醒一件事，我們使用的方法不會是在 Rust 中建立網路伺服器的最佳方案。<a href="https://crates.io/">crates.io</a> 上有不少已經能用在生產環境的 crate，它們都有提供比我們所建立的還更完善的網路伺服器與執行緒池。</p>
+<p>不過在我們開始之前，我們需要提醒一件事，我們使用的方法不會是在 Rust 中建立網頁伺服器的最佳方案。<a href="https://crates.io/">crates.io</a> 上有不少已經能用在生產環境的 crate，它們都有提供比我們所建立的還更完善的網頁伺服器與執行緒池。</p>
 <p>然而我們在本章節的目的是要幫助你學習，而不是走捷徑。因爲 Rust 是個系統程式設計語言，我們可以選擇我們想運用的抽象層級，而且可以比其他語言更可能且實際地抵達最底層。我們會親自寫出基本的 HTTP 伺服器與執行緒池，來幫助你瞭解往後你可能會用到的 crate 背後的基本概念與技術。</p>
 <blockquote>
 <ul>
