--- a/ch06-01-defining-an-enum.html
+++ b/ch06-01-defining-an-enum.html
@@ -365,7 +365,7 @@ struct ChangeColorMessage(i32, i32, i32); // 元組結構體
 <p>我稱它爲我數十億美元的錯誤。當時我正在爲一門物件導向語言設計第一個全方位的引用型別系統。我當時的目標是透過編譯器自動檢查來確保所有的引用都是安全的。但我無法抗拒去加入空引用的誘惑，因爲實作的方式實在太簡單了。這導致了無數的錯誤、漏洞與系統崩潰，在接下來的四十年中造成了大概十億美金的痛苦與傷害。</p>
 </blockquote>
 <p>空值的問題在於，如果你想在非空值使用空值的話，你會得到某種錯誤。由於空值與非空值的特性無所不再，你會很容易犯下這類型的錯誤。</p>
-<p>但有時後能夠表達「空（null）」的概念還是很有用的：空值代表目前的數值因爲某些原因而無效或缺少。</p>
+<p>但有時候能夠表達「空（null）」的概念還是很有用的：空值代表目前的數值因爲某些原因而無效或缺少。</p>
 <p>所以問題不在於概念本身，而在於如何實作。所以 Rust 並沒有空值，但是它有一個枚舉可以表達出這樣的概念，也就是一個值可能是存在或不存在的。此枚舉就是 <code>Option&lt;T&gt;</code>，它是在<a href="../std/option/enum.Option.html">標準函式庫中這樣定義的</a><!-- ignore -->：</p>
 <pre><pre class="playground"><code class="language-rust">
 <span class="boring">#![allow(unused)]
